--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <ul>
     <li><a href="#">Photoshoot</a></li>
     <li><a href="#">Galleries</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="#">out</a></li>
     <li><a href="#">BookNow</a></li>
     <li class="active"><a href="#">Contact Us</a></li>
 </ul></div>
